# tokio-pgqueue

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEGRATION_REPORT.md  LICENSE  README.md
.github/workflows/: ci.yml
.sqlx/: query-04c76effd8388039d70948d1a14bf430a6ea90a09b1ccdaddc33e4f4bc833187.json  query-1b738adbd991b2eb17b7c7a6cb749f0fc71f15b8b1cbdd9d0aee2f7201a98cd8.json  query-1c3b92b341a30f0e367cbed1f05ca781a883967b41293efd0eb385e1cce24b05.json  query-2444132edd5b669c6358a4c07340b9567674c54dde046ae6fc1974de13397ab9.json  query-409e1449ea358072516321f518d2b4059664ad360e048aa1b01fd4446fc381ed.json  query-55cd0b417d04ced74c62b5974af9834e0bb0e089484a8d7027b9ac560cad8626.json  query-662f71011f9e8cc4c21f95b1efcc59aeeedb81d67e27018c95267751f1b87a60.json  query-73879e159ab947ed52e6c72809a93b373a106103802e2a036ef680acba62664d.json  query-73ee8f91d3bda09a4cfe44b004076bd5409326738925de0fd12fe0cf3cc52f6c.json  query-78656a7da8d182f72fa197d6fa0feac1f0284fd5454e9028cc783fc0a39755e5.json  query-9d40dfae4f5df1a385a7319d61b2603b086c10ea212cae6a9e38cdca8b1f7427.json  query-9e484275824d7e05c498f268542b426a605ed22e9bde7eee55d3e166c0385d08.json  query-a9d9a7f54404fb80723f9cf756025728cb7d6f95b7253fe047e5dd0ac0db2def.json  query-b79a2a3544f4ff7d67e494041a1cf7d89486b4e9bb668dd4aeab4829756c943a.json  query-c7247f287b405e74ec372b183af7bff161bce4404324161b7ad5943e7676cc97.json  query-ca7b17f6c1061f025044ea143ac9fb609dd56248b9a4b4e4598b605e001eb235.json  query-d863645b0dd541b7a7afd396d69a03e6103f1818094fafaba042f903bfa57f86.json  query-f8d3de062df84744b12736f306b25904d67503f3ef7e6d4d957114e3a42cabc9.json  query-fe126325cba721568c553ea58a7f16a03fa919daa379988de0098f4bb5ed8218.json  query-fe3552c0f6a63aefb97754f79cee0a288fe989df53fdc59f4d5ae2afe10671a8.json
examples/: basic_queue.rs  multi_queue.rs  scheduled_jobs.rs  web_server_integration.rs  xero_forecaster_pilot.rs
migrations/: 001_initial.sql  002_priority_and_dlq.sql  003_retry_backoff.sql
src/: error.rs  lib.rs  metrics.rs  types.rs  worker.rs
tests/: edge_cases_test.rs  integration_test.rs  unit_test.rs
