[package]
name = "tokio-pgqueue"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "A Postgres-backed job queue with heartbeat-based job claims and crash recovery"
license = "MIT OR Apache-2.0"
repository = "https://github.com/noahbclarkson/tokio-pgqueue"
readme = "README.md"
keywords = ["postgres", "queue", "job", "async", "tokio"]
categories = ["asynchronous", "database"]

[features]
default = []
metrics = ["dep:metrics"]

[dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "uuid", "json", "migrate"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["serde", "v4"] }
metrics = { version = "0.24", optional = true }

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
tracing-subscriber = "0.3.22"
metrics = { version = "0.24" }
metrics-util = { version = "0.18" }

[[example]]
name = "basic_queue"
path = "examples/basic_queue.rs"

[[example]]
name = "scheduled_jobs"
path = "examples/scheduled_jobs.rs"

[[example]]
name = "multi_queue"
path = "examples/multi_queue.rs"

[[example]]
name = "web_server_integration"
path = "examples/web_server_integration.rs"

